# python

./: .gitignore  README.md  pyproject.toml
data/: app.db
src/myfirstproject/: db.py  main.py
src/myfirstproject/api/: schemas.py  user_routes.py
src/myfirstproject/common/: utils.py
src/myfirstproject/user/: __init__.py  mappers.py  models.py  service.py  service_api.py  storage.py  storage_sqlite.py
tests/: test_api_pagination.py  test_user_service.py
